Update build scripts, modify database name, and implement PostgreSQL initialization script

--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "build": "nest build && cp -r public/ dist/public/",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "prestart:dev": "bash scripts/start-postgres.sh && mkdir -p dist/public && cp -r public/* dist/public/",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
