--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^11.1.2",
     "@nestjs/serve-static": "^5.0.3",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/pg": "^8.15.2",
     "express": "^5.1.0",
     "fs-extra": "^11.3.0",
     "multer": "^2.0.0",
