--- a/package.json
+++ b/package.json
@@ -28,11 +28,15 @@
     "@nestjs/platform-express": "^11.1.2",
     "@nestjs/serve-static": "^5.0.3",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.15.2",
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "fs-extra": "^11.3.0",
     "multer": "^2.0.0",
     "mysql": "^2.18.1",
+    "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
